<resources>
    <string name="app_name">Simple Weather</string>

    <!-- Units of measurement -->
    <string name="unit_temperature_degree">\u00B0</string>
    <string name="unit_temperature_celsius">C</string>
    <string name="unit_temperature_fahrenheit">F</string>
    <string name="unit_wind_speed_metric">\u0020kph</string>
    <string name="unit_wind_speed_imperial">\u0020mph</string>
    <string name="unit_rain_likelihood">%</string>
    <string name="unit_cloud_cover">%</string>
    <string name="unit_humidity">%</string>
    <string name="unit_pressure">\u0020mb</string>
    <string name="unit_distance_metric">\u0020km</string>
    <string name="unit_distance_imperial">\u0020miles</string>

    <!-- Menu items -->
    <string name="menu_search">Search</string>
    <string name="menu_current_location">Current Location</string>
    <string name="menu_settings">Settings</string>

    <!-- UI group titles -->
    <string name="title_sun_moon">Sun and Moon</string>
    <string name="title_misc_details">Details</string>
    <string name="title_week_forecast">Seven Day Forecast</string>

    <!-- UI headings -->
    <string name="heading_wind_speed">Wind Speed</string>
    <string name="heading_rain_likelihood">Rain Likelihood</string>
    <string name="heading_humidity">Humidity</string>
    <string name="heading_pressure">Pressure</string>
    <string name="heading_cloud_cover">Cloud Cover</string>
    <string name="heading_visibility">Visibility</string>
    <string name="heading_sunrise">Sunrise</string>
    <string name="heading_sunset">Sunset</string>

    <!-- UI placeholders -->
    <string name="placeholder_temperature">NN\u00B0</string>
    <string name="placeholder_rain_chance">NN%</string>
    <string name="placeholder_weather_description">Sunny</string>
    <string name="placeholder_time">NN:NNam</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
